# meeg-utils

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/source/: conf.py  index.rst
docs/source/about/: changelog.rst  license.rst
docs/source/api/: batch.rst  pipeline.rst  preprocessing.rst
docs/source/api/_autosummary/: meeg_utils.preprocessing.bad_channels.rst  meeg_utils.preprocessing.batch.rst  meeg_utils.preprocessing.ica.rst  meeg_utils.preprocessing.line_noise.rst  meeg_utils.preprocessing.pipeline.rst  meeg_utils.preprocessing.rst
docs/source/developer/: ci_cd.rst  contributing.rst  release.rst  testing.rst
docs/source/user_guide/: batch_processing.rst  installation.rst  preprocessing.rst  quickstart.rst
src/meeg_utils/: __init__.py  logger.py
src/meeg_utils/preprocessing/: __init__.py  bad_channels.py  batch.py  ica.py  line_noise.py  pipeline.py
tests/: __init__.py  conftest.py  test_logging.py
tests/test_preprocessing/: README.md  test_batch.py  test_pipeline.py
